--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="pages/page.html">About</a></li>
               <li><a href="pages/contact.html">Contact</a></li>
-              <li><a href="pages/404.html">Error Page</a></li>
+              
             </ul>
           </div>
           <div class="header_top_right">
@@ -57,17 +57,78 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav custom_nav">
             <li class=""><a href="index.html">Home</a></li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Archives</a>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 1</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="pages/archive-main.html">Archive</a></li>
-                <li><a href="pages/archive1.html">Archive 1</a></li>
-                <li><a href="pages/archive2.html">Archive 2</a></li>
-                <li><a href="pages/archive3.html">Archive 3</a></li>
+                <li><a href="#">Article 1</a></li>
+                <li><a href="#">Article 2</a></li>
+                <li><a href="#">Article 3</a></li>
+                <li><a href="#">Article 4</a></li>
+                <li><a href="#">Article 5</a></li>
               </ul>
             </li>
-            <li><a href="pages/single.html">Single page</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
-            <li><a href="pages/404.html">404 page</a></li>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 2</a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Article 1</a></li>
+                <li><a href="#">Article 2</a></li>
+                <li><a href="#">Article 3</a></li>
+                <li><a href="#">Article 4</a></li>
+                <li><a href="#">Article 5</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 3</a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Article 1</a></li>
+                <li><a href="#">Article 2</a></li>
+                <li><a href="#">Article 3</a></li>
+                <li><a href="#">Article 4</a></li>
+                <li><a href="#">Article 5</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 4</a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Article 1</a></li>
+                <li><a href="#">Article 2</a></li>
+                <li><a href="#">Article 3</a></li>
+                <li><a href="#">Article 4</a></li>
+                <li><a href="#">Article 5</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 5</a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Article 1</a></li>
+                <li><a href="#">Article 2</a></li>
+                <li><a href="#">Article 3</a></li>
+                <li><a href="#">Article 4</a></li>
+                <li><a href="#">Article 5</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 6</a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Article 1</a></li>
+                <li><a href="#">Article 2</a></li>
+                <li><a href="#">Article 3</a></li>
+                <li><a href="#">Article 4</a></li>
+                <li><a href="#">Article 5</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 7</a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Article 1</a></li>
+                <li><a href="#">Article 2</a></li>
+                <li><a href="#">Article 3</a></li>
+                <li><a href="#">Article 4</a></li>
+                <li><a href="#">Article 5</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 8</a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Article 1</a></li>
+                <li><a href="#">Article 2</a></li>
+                <li><a href="#">Article 3</a></li>
+                <li><a href="#">Article 4</a></li>
+                <li><a href="#">Article 5</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
@@ -418,17 +479,6 @@
               </div>
             </div>
           </div>
-          <div class="single_bottom_rightbar">
-            <h2>Blog Archive</h2>
-            <div class="blog_archive wow fadeInDown">
-              <form action="#">
-                <select>
-                  <option value="">Blog Archive</option>
-                  <option value="">October(20)</option>
-                </select>
-              </form>
-            </div>
-          </div>
           <div class="single_bottom_rightbar wow fadeInDown">
             <h2>Popular Lnks</h2>
             <ul>
@@ -463,21 +513,9 @@
             </ul>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div class="single_footer_top wow fadeInDown">
-            <h2>Labels</h2>
-            <ul class="labels_nav">
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Games</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Sports</a></li>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">Slider</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
-            </ul>
-          </div>
-        </div>
+        <!--<div class="col-lg-4 col-md-4 col-sm-4">-->
+          
+        <!--</div>-->
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInRight">
             <h2>About Us</h2>
@@ -497,7 +535,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_right">
-            <p>Developed BY Wpfreeware</p>
+  
           </div>
         </div>
       </div>
