--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>magExpress</title>
+<title>24/7 Fitness</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,12 +42,14 @@
           </div>
         </div>
         <div class="header_bottom">
-          <div class="header_bottom_left"><a class="logo" href="index.html">mag<strong>Express</strong> <span>A Pro Magazine Template</span></a></div>
+          <div class="header_bottom_left"><a class="logo" href="index.html">24/7<strong>Fitness</strong> <span>The right way to stay fit</span></a></div>
           <div class="header_bottom_right"><a href="#"><img src="images/addbanner_728x90_V1.jpg" alt=""></a></div>
         </div>
       </div>
     </div>
   </header>
+  
+  <!--This is the navbar-->
   <div id="navarea">
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
@@ -57,76 +59,76 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav custom_nav">
             <li class=""><a href="index.html">Home</a></li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 1</a>
+            <li class="dropdown"> <a href="lifestyle" class="" data-toggle="dropdown" role="button" aria-expanded="false">Lifestyle</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Article 1</a></li>
-                <li><a href="#">Article 2</a></li>
-                <li><a href="#">Article 3</a></li>
-                <li><a href="#">Article 4</a></li>
-                <li><a href="#">Article 5</a></li>
+                <li><a href="articles/lifestyle/article1.html">The Psychology of Your Home: Where You Live Can Affect Your Mental Health</a></li>
+                <li><a href="articles/lifestyle/article2.html">3 Smart Hack Productivity Hacks</a></li>
+                <li><a href="articles/lifestyle/article3.html">3 Ways Reading Can Boost Your Mental Health</a></li>
+                <li><a href="articles/lifestyle/article4.html">Dating Decisions: How Relationships Can Affect Your Mental Health</a></li>
+                <li><a href="articles/lifestyle/article5.html">  The Color of What you Wear can Affect Your Work Performance</a></li>
               </ul>
             </li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 2</a>
+            <li class="dropdown"> <a href="Travel" class="" data-toggle="dropdown" role="button" aria-expanded="false">Travel</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Article 1</a></li>
-                <li><a href="#">Article 2</a></li>
-                <li><a href="#">Article 3</a></li>
-                <li><a href="#">Article 4</a></li>
-                <li><a href="#">Article 5</a></li>
+                <li><a href="articles/travel/article1.html">The 5 Best Gyms In The World</a></li>
+                <li><a href="articles/travel/article2.html">The 3 Most Innovative Gyms In The US</a></li>
+                <li><a href="articles/travel/article3.html">Best Hiking Trails in the DMV</a></li>
+                <li><a href="articles/travel/article4.html">Fitness Vacations to take in 2018</a></li>
+                <li><a href="articles/travel/article5.html">How To Stay Fit When Traveling</a></li>
               </ul>
             </li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 3</a>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Technology</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Article 1</a></li>
-                <li><a href="#">Article 2</a></li>
-                <li><a href="#">Article 3</a></li>
-                <li><a href="#">Article 4</a></li>
-                <li><a href="#">Article 5</a></li>
+                <li><a href="articles/technology/article1.html">Technology hidden in shoes for fitness</a></li>
+                <li><a href="articles/technology/article2.html">Better your work out with music</a></li>
+                <li><a href="articles/technology/article3.html">Drone’s in fitness</a></li>
+                <li><a href="articles/technology/article4.html">Fitbit Alta HR</a></li>
+                <li><a href="articles/technology/article5.html">Experience fitness in VR</a></li>
               </ul>
             </li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 4</a>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Nutrition</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Article 1</a></li>
-                <li><a href="#">Article 2</a></li>
-                <li><a href="#">Article 3</a></li>
-                <li><a href="#">Article 4</a></li>
-                <li><a href="#">Article 5</a></li>
+                <li><a href="articles/nutrition/article1.html">Amazing food recipe</a></li>
+                <li><a href="articles/nutrition/article2.html">Positives and negatives of power supplements</a></li>
+                <li><a href="articles/nutrition/article3.html">What to eat and what not to eat</a></li>
+                <li><a href="articles/nutrition/article4.html">weight loss plans</a></li>
+                <li><a href="articles/nutrition/article5.html">Basics of weight loss</a></li>
               </ul>
             </li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 5</a>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Fashion</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Article 1</a></li>
-                <li><a href="#">Article 2</a></li>
-                <li><a href="#">Article 3</a></li>
-                <li><a href="#">Article 4</a></li>
-                <li><a href="#">Article 5</a></li>
+                <li><a href="articles/fashion/article1.html">Good Workout Clothing For Women</a></li>
+                <li><a href="articles/fashion/article2.html">Beneficial Workout Clothing</a></li>
+                <li><a href="articles/fashion/article3.html">Clothes That Are Needed For Women To Workout</a></li>
+                <li><a href="articles/fashion/article4.html">benefical workout shoes</a></li>
+                <li><a href="articles/fashion/article5.html"> Why Is Workout Clothing Beneficial</a></a></li>
               </ul>
             </li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 6</a>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Mental Health</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Article 1</a></li>
-                <li><a href="#">Article 2</a></li>
-                <li><a href="#">Article 3</a></li>
-                <li><a href="#">Article 4</a></li>
-                <li><a href="#">Article 5</a></li>
+                <li><a href="articles/mental-health/article1.html">What is Mental Health?</a></li>
+                <li><a href="articles/mental-health/article2.html">N/A</a></li>
+                <li><a href="articles/mental-health/article3.html">N/A</a></li>
+                <li><a href="articles/mental-health/article4.html">N/A</a></li>
+                <li><a href="articles/mental-health/article5.html">N/A</a></li>
               </ul>
             </li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 7</a>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Sports</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Article 1</a></li>
-                <li><a href="#">Article 2</a></li>
-                <li><a href="#">Article 3</a></li>
-                <li><a href="#">Article 4</a></li>
-                <li><a href="#">Article 5</a></li>
+                <li><a href="articles/sports/article1.html">Basic things that help football players Performance</a></li>
+                <li><a href="articles/sports/article2.html">Stretches that will help improve football players performances</a></li>
+                <li><a href="articles/sports/article3.html">Leg workouts that are benefical for football players </a></li>
+                <li><a href="articles/sports/article4.html">Workouts that help football players increase their endurance</a></li>
+                <li><a href="articles/sports/article5.html">Workouts that help football players agility</a></li>
               </ul>
             </li>
-            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Category 8</a>
+            <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Workouts</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Article 1</a></li>
-                <li><a href="#">Article 2</a></li>
-                <li><a href="#">Article 3</a></li>
-                <li><a href="#">Article 4</a></li>
-                <li><a href="#">Article 5</a></li>
+                <li><a href="articles/workouts/article1.html">N/A</a></li>
+                <li><a href="articles/workouts/article2.html">N/A</a></li>
+                <li><a href="articles/workouts/article3.html">N/A</a></li>
+                <li><a href="articles/workouts/article4.html">N/A</a></li>
+                <li><a href="articles/workouts/article5.html">N/A</a></li>
               </ul>
             </li>
           </ul>
@@ -134,6 +136,10 @@
       </div>
     </nav>
   </div>
+  <!--This is the ed of the navbar-->
+
+
+
   <section id="mainContent">
     <div class="content_top">
       <div class="row">
